--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	  </head>
       <body>
 			<h1>Index</h1>
-            <a href="file:///D:/jdale/Documents/Uni/Website%20Tech/week_1/index.html">Week 1 - Index</a>
+            <!-- <a href="file:///D:/jdale/Documents/Uni/Website%20Tech/week_1/index.html">Week 1 - Index</a> -->
             <br>
-            <a href="JSDale.github.io/Webstie-Tech/week_1/index.html">Week 1 - Index</a>
+            <a href="https://jsdale.github.io/Website-Tech/week_1/index">Week 1 - Index</a>
       </body>
 </html>
