trying to get links to work

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	  </head>
       <body>
 			<h1>Index</h1>
-            <a href="/week_1/index">Week 1 - Index</a>
+            <a href="/Website-Tech/week_1/index">Week 1 - Index</a>
       </body>
 </html>
