got the links working

--- a/week_1/My_CV.html
+++ b/week_1/My_CV.html
@@ -22,7 +22,7 @@
             <br>
             2016 - Graduated GCSEs with 3 Bs, 10 Cs including English, Maths and Science from Queen Elizabeths school Dorset
             <br>
-            <img src="QE.jfif" alt="Image of QE Dorset."
+            <img src="QE.jfif" alt="Image of QE Dorset.">
         </p>
     </body>
 </html>
