--- a/week_1/index.html
+++ b/week_1/index.html
@@ -5,10 +5,8 @@
 	  </head>
       <body>
 			<h1>Index - Week 1</h1>
-            <a href="file://D:\jdale\Documents\Uni\Website Tech\index.html">Main Index</a>
+            <a href="/Website-Tech/index.html">Main Index</a>
             <br>
-            <a href="JSDale.github.io/Website-Tech/index">Main Index</a>
-            <br>
-            <a href="file://D:\jdale\Documents\Uni\Website Tech\week_1\My_CV.html"> My CV</a>
+            <a href="/Website-Tech/week_1/My_CV.html"> My CV</a>
       </body>
 </html>
