--- a/week_1/My_CV.html
+++ b/week_1/My_CV.html
@@ -3,7 +3,7 @@
     <head>
         <title>My CV</title>
     </head>
-    <body>
+    <body style="background-color:rgba(210, 245, 245, 0.664);">
         <h1><center>Jacob Dale Curriculum Vitae </center> </h1>
         <p>
             <center>Jacob Dale </center>
