changed bg color to fff code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	  <head>
 			<title>The Index for my tasked website </title>
 	  </head>
-      <body style="background-color:rgba(210, 245, 245, 0.664);">
+      <body style="background-color:#A9E2F3;">
 			<h1>Index</h1>
             <a href="/Website-Tech/week_1/index">Week 1 - Index</a>
       </body>
