--- a/week_1/index.html
+++ b/week_1/index.html
@@ -3,7 +3,7 @@
 	  <head>
 			<title>The Index for week 1</title>
 	  </head>
-      <body  style="background-color:rgba(210, 245, 245, 0.664);">
+      <body  style="background-color:#A9E2F3;">
 			<h1>Index - Week 1</h1>
             <a href="/Website-Tech/index.html">Main Index</a>
             <br>
