--- a/week_1/My_CV.html
+++ b/week_1/My_CV.html
@@ -3,7 +3,7 @@
     <head>
         <title>My CV</title>
     </head>
-    <body style="background-color:#A9E2F3;">
+    <body style="background-color:#cef9f9;">
         <h1><center>Jacob Dale Curriculum Vitae </center> </h1>
         <p>
             <center>Jacob Dale </center>
