--- a/week_1/My_CV.html
+++ b/week_1/My_CV.html
@@ -24,5 +24,13 @@
             <br>
             <img src="QE.jfif" alt="Image of QE Dorset.">
         </p>
+        <h2>Work Expierence</h2>
+        <p>
+            Summer 2019 - Worked for Brockenhurst College as an IT technician
+            <br>
+            Summer 2018 - Worked for Brockenhurst College as an IT technician
+            <br>
+            April - 2018 - Worked at Spire Technologies building computers for a week
+        </p>
     </body>
 </html>
