--- a/week_1/My_CV.html
+++ b/week_1/My_CV.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="css" href="week_1_style.css">
         <title>My CV</title>
     </head>
-    <body style="background-color:#cef9f9;">
+    <body>
         <h1><center>Jacob Dale Curriculum Vitae </center> </h1>
         <p>
             <center>Jacob Dale </center>
