--- a/week_1/My_CV.html
+++ b/week_1/My_CV.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="css" href="/Website-Tech/week_1/week_1_style.css">
+        <link rel="stylesheet" type="text/css" href="/Website-Tech/week_1/week_1_style.css">
         <title>My CV</title>
     </head>
     <body>
