applied css to other pages

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	  <head>
+			<link rel="stylesheet" type="text/css" href="/Website-Tech/week_1/week_1_style.css">
 			<title>The Index for my tasked website </title>
 	  </head>
-      <body style="background-color:#cef9f9">
+      <body>
 			<h1>Index</h1>
             <a href="/Website-Tech/week_1/index">Week 1 - Index</a>
       </body>
