--- a/week_1/index.html
+++ b/week_1/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-	  <head>
-			<title>The Index for week 1</title>
-	  </head>
-      <body  style="background-color:#cef9f9;">
-			<h1>Index - Week 1</h1>
+	<head>
+            <link rel="stylesheet" type="text/css" href="/Website-Tech/week_1/week_1_style.css">      
+            <title>The Index for week 1</title>
+	</head>
+      <body>
+		<h1>Index - Week 1</h1>
             <a href="/Website-Tech/index.html">Main Index</a>
             <br>
             <a href="/Website-Tech/week_1/My_CV.html"> My CV</a>
