added index css

--- a/week_2/index.html
+++ b/week_2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-            <link rel="stylesheet" type="text/css" href="indexStyleSheet.css">
+            <link rel="stylesheet" type="text/css" href="IndexStyleSheet.css">
             <title>The Index for week 2</title>
 	</head>
       <body>
