created style sheet for foody

--- a/week_2/Foody.html
+++ b/week_2/Foody.html
@@ -6,6 +6,16 @@
     <title>Foody</title>
 </head>
 <body>
-    
+    <h1>
+        Foody
+    </h1>
+    <nav>
+        <ul>
+            <li><a href="#"> Pricing</a></li>
+            <li><a href="#"> Blog</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
