accidently changed wrong css file link

--- a/week_2/Foody.html
+++ b/week_2/Foody.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/Website-Tech/week_2/Foody_Style_Sheet.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foody</title>
