--- a/week_2/WebsitePositioning.html
+++ b/week_2/WebsitePositioning.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/week_2_style_sheet.css">
+    <link rel="stylesheet" href="week_2_style_sheet.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 2</title>
