added to css file for foody

--- a/week_2/Foody.html
+++ b/week_2/Foody.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/Website-Tech/week_2/Foody_Style_Sheet.css">
+    <link rel="stylesheet" href="Foody_Style_Sheet.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foody</title>
 </head>
 <body>
-    <h1>
-        Foody
-    </h1>
-    <nav>
-        <ul>
-            <li><a href="#"> Pricing</a></li>
-            <li><a href="#"> Blog</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+    <div>
+        <header id="header1">
+            <img src="Icons/logo.png" alt="Foody Logo." >
+        </header>
+        <nav>
+            <ul>
+                <li><a href="#"> Pricing</a></li>
+                <li><a href="#"> Blog</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
