sorted out underline

--- a/week_2/Foody.html
+++ b/week_2/Foody.html
@@ -13,10 +13,10 @@
         </header>
         <nav>
             <ul>
-                <li><a href="#"> Pricing</a></li>
-                <li><a href="#"> Blog</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#"> <span class="underline"> Pricing</span></a></li>
+                <li><a href="#"> <span class="underline"> Blog</span></a></li>
+                <li><a href="#"> <span class="underline"> FAQ</span></a></li>
+                <li><a href="#"> <span class="underline"> Contact</span></a></li>
             </ul>
         </nav>
     </div>
