--- a/week_2/Foody.html
+++ b/week_2/Foody.html
@@ -7,21 +7,27 @@
     <title>Foody</title>
 </head>
 <body>
-    <div>
-        <header id="header1">
-            <img src="Icons/logo.png" alt="Foody Logo." >
-        </header>
-        <nav>
-            <ul>
-                <li><a href="#"> <span class="underline"> Pricing</span></a></li>
-                <li><a href="#"> <span class="underline"> Blog</span></a></li>
-                <li><a href="#"> <span class="underline"> FAQ</span></a></li>
-                <li><a href="#"> <span class="underline"> Contact</span></a></li>
-            </ul>
-        </nav>
-    </div>
-    <div id="slogan">
-        <h1>Hello there,</h1>
+    <div id="contents">
+        <div>
+            <header id="header1">
+                <img src="Icons/logo.png" alt="Foody Logo." >
+            </header>
+            <nav>
+                <ul>
+                    <li><a href="#"> <span class="underline"> Pricing</span></a></li>
+                    <li><a href="#"> <span class="underline"> Blog</span></a></li>
+                    <li><a href="#"> <span class="underline"> FAQ</span></a></li>
+                    <li><a href="#"> <span class="underline"> Contact</span></a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="slogan">
+            <h2>Hello there,</h2>
+            <h1>A Smart kitchen & cooking timer for chef and cooking lovers</h1>
+        </div>
+        <div id="btnDownload">
+            <img src="Icons/downloadIcon.png" alt="Download button">
+        </div>
     </div>
 </body>
 </html>
