--- a/week_2/Foody.html
+++ b/week_2/Foody.html
@@ -21,13 +21,42 @@
                 </ul>
             </nav>
         </div>
+        <!--end of nav nd header div-->
         <div id="slogan">
             <h2>Hello there,</h2>
             <h1>A Smart kitchen & cooking timer for chef and cooking lovers</h1>
         </div>
+        <!--end of slogan-->
         <div id="btnDownload">
             <img src="Icons/downloadIcon.png" alt="Download button">
         </div>
+        <!--end of btnDownload-->
+        <div id="carouselSection" class="carousel slide" data-ride="carousel">
+            <button class="carousel_button carousel_button--left">
+                <img src="Icons/leftArrow.png" alt="left arrow">
+            </button>
+            <div id="carousel_track-container">
+                <ul id="carousel_track">
+                    <li id="carousel_slide">
+                        <img src="Icons/logo.png" alt="logo">
+                    </li>
+                    <li id="carousel_slide">
+                        <img src="Icons/downloadIcon.png" alt="download button">
+                    </li>
+                </ul>
+            </div>
+            <button class="carousel_button carousel_button--right">
+                <img src="Icons/rightArrow.jpg" alt="right arrow">
+            </button>
+
+            <div class="carousel_nav">
+                <button class="carousel_indicator"></button>
+                <button class="carousel_indicator"></button>
+                <button class="carousel_indicator"></button>
+            </div>
+        </div>
+        <!--end of carousel div-->
     </div>
+    <!--end of contents-->
 </body>
 </html>
