--- a/week_3/index.html
+++ b/week_3/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week 3 Index</title>
 </head>
 <body>
-    
+    <h1>Index</h1>
+    <a href="/Website-Tech/index"> Main Index - Index</a>
+    <br>
+    <a href="/Website-Tech/week_3/FirstForm.html"> First Form - Index</a>
 </body>
 </html>
