--- a/week_3/FirstForm.html
+++ b/week_3/FirstForm.html
@@ -6,7 +6,7 @@
     <title>FirstForm</title>
 </head>
 <body>
-    <form action="D:\jdale\Documents\Uni\Website Tech\week_3/form1Results.html" method="post">
+    <form action="\week_3/form1Results.html" method="post">
         <p> Name*:<input type="text"></input> </p>
         <p> Email*:<input type="email"></input> </p>
         <p> Number*:<input type="tel"></input> </p>
