--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 			<a href="/Website-Tech/week_1/index">Week 1 - Index</a>
 			<br>
 			<a href="/Website-Tech/week_2/index"> Week 2 - Index</a>
+			<br>
+			<a href="/Website-Tech/week_3/index"> Week 3 - Index</a>
       </body>
 </html>
