--- a/week_3/index.html
+++ b/week_3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="IndexStyleSheet.css">
+    <link rel="stylesheet" type="text/css" href="/Website-Tech/IndexStyleSheet.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 3 Index</title>
