--- a/week_4/index.html
+++ b/week_4/index.html
@@ -13,5 +13,7 @@
     <a href="/Website-Tech/week_3/Task1.html"> First Form - Index</a>
     <br>
     <a href="/Website-Tech/week_3/ex2.html"> First Form - Index</a>
+    <br>
+    <a href="/Website-Tech/week_3/SummingNumbers.html"> First Form - Index</a>
 </body>
 </html>
