updated main indexc

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 			<a href="/Website-Tech/week_2/index"> Week 2 - Index</a>
 			<br>
 			<a href="/Website-Tech/week_3/index"> Week 3 - Index</a>
+			<br>
+			<a href="/Website-Tech/week_4/index"> Week 3 - Index</a>
       </body>
 </html>
