--- a/week_4/index.html
+++ b/week_4/index.html
@@ -10,10 +10,10 @@
     <h1>Index</h1>
     <a href="/Website-Tech/index"> Main Index - Index</a>
     <br>
-    <a href="/Website-Tech/week_3/Task1.html"> First Form - Index</a>
+    <a href="/Website-Tech/week_4/Task1.html"> Task 1 - Index</a>
     <br>
-    <a href="/Website-Tech/week_3/ex2.html"> First Form - Index</a>
+    <a href="/Website-Tech/week_4/ex2.html"> Task 2 - Index</a>
     <br>
-    <a href="/Website-Tech/week_3/SummingNumbers.html"> First Form - Index</a>
+    <a href="/Website-Tech/week_4/SummingNumbers.html"> Task 3 - Index</a>
 </body>
 </html>
