created number guessing game

--- a/week_4/index.html
+++ b/week_4/index.html
@@ -15,5 +15,7 @@
     <a href="/Website-Tech/week_4/ex2.html"> Task 2 - Index</a>
     <br>
     <a href="/Website-Tech/week_4/SummingNumbers.html"> Task 3 - Index</a>
+    <br>
+    <a href="/Website-Tech/week_4/Guessinggame.html"> Task 4 - Index</a>
 </body>
 </html>
