--- a/TCA/index.html
+++ b/TCA/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TCA Jacob Dale</title>
 </head>
 <body>
     <div id="page">
@@ -51,9 +52,10 @@
                         <p>first_name: <input type="text" required></input></p>
                         <p>last_name: <input type="text" required></input></p>
                         <p>email: <input type="email" required></input></p>
-                        <div id="txtArea_message_div">
+                        <p id="txtArea_message_div">
+                           Message:
                             <textarea name="message" id="txtArea_message"></textarea>
-                        </div>
+                        <p>
                         <p>
                             <input type="submit" value="Send Message">
                         </p>
