--- a/TCA/index.html
+++ b/TCA/index.html
@@ -53,8 +53,7 @@
                         <p>last_name: <input type="text" required></input></p>
                         <p>email: <input type="email" required></input></p>
                         <p id="txtArea_message_div">
-                           Message:
-                            <textarea name="message" id="txtArea_message"></textarea>
+                           Message: <textarea name="message" id="txtArea_message"></textarea>
                         <p>
                         <p>
                             <input type="submit" value="Send Message">
