--- a/TCA/index.html
+++ b/TCA/index.html
@@ -9,21 +9,19 @@
 <body>
     <div id="page">
         <div id="page_header">
-            <p>
-                <a id="Header_Links" href="#"> Home</a> 
-            </p>
-            <p>
-                <a id="Header_Links" href="#"> About</a> 
-            </p>
-            <p>
-                <a id="Header_Links" href="#"> News</a> 
-            </p>
+            <nav>
+                <ul>
+                    <li><a href="#"> <span class="links"> Home</span></a></li>
+                    <li><a href="#"> <span class="links"> About</span></a></li>
+                    <li><a href="#"> <span class="links"> News</span></a></li>
+                </ul>
+            </nav>
         </div>
         <div id="main_section">
-            <h1 id="main_section_header">
-                Heading 1
-            </h1>
             <div id="sections">
+                <h1 id="main_section_header">
+                    Heading 1
+                </h1>
                 <div id="section_1">
                     <h1>
                         Section 1
@@ -63,7 +61,7 @@
             </div>
         </div>
         <footer id="page_footer">
-            <p1>
+            <p1 id="footer_text">
                 Copyright ACME Corp
             </p1>
         </footer>
