--- a/TCA/index.html
+++ b/TCA/index.html
@@ -47,24 +47,24 @@
                         Contact Us
                     </h1>
                     <form id="contact_us" action="">
-                        <p>first_name: <input type="text" required></input></p>
-                        <p>last_name: <input type="text" required></input></p>
-                        <p>email: <input type="email" required></input></p>
-                        <p id="txtArea_message_div">
+                        <p id="first_name">first_name: <input type="text" required id="txt_first_name"></input></p>
+                        <p id="last_name"> last_name: <input type="text" required id="txt_last_name"></input></p>
+                        <p id ="email">email: <input type="email" required id="txt_email"></input></p>
+                        <p id="txtArea_message_p">
                            Message: <textarea name="message" id="txtArea_message"></textarea>
                         <p>
                         <p>
                             <input type="submit" value="Send Message">
                         </p>
                     </form>
-                </div>
-            </div>
-        </div>
-        <footer id="page_footer">
+                </div id="section_5">
+            </div id="sections">
+        </div id="main_section">
+        <div id="page_footer">
             <p1 id="footer_text">
                 Copyright ACME Corp
             </p1>
-        </footer>
-    </div>
+        </div>
+    </div id="page">
 </body>
 </html>
