--- a/TCA/index.html
+++ b/TCA/index.html
@@ -47,12 +47,16 @@
                         Contact Us
                     </h1>
                     <form id="contact_us" action="">
-                        <p id="first_name">first_name: <input type="text" required id="txt_first_name"></input></p>
-                        <p id="last_name"> last_name: <input type="text" required id="txt_last_name"></input></p>
-                        <p id ="email">email: <input type="email" required id="txt_email"></input></p>
+                        <p id="first_name">First Name: <input type="text" required id="txt_first_name"></input></p>
+                        <p id="last_name"> Last Name: <input type="text" required id="txt_last_name"></input></p>
+                        <p id ="email">Email: <input type="email" required id="txt_email"></input></p>
                         <p id="txtArea_message_p">
-                           Message: <textarea name="message" id="txtArea_message"></textarea>
-                        <p>
+                           Message:
+                        </p>
+                        <p id="txtArea_message">
+                            <textarea name="message" id="txtArea_message" cols="22" rows="5"></textarea>
+                        </p>
+                        </div>
                         <p>
                             <input type="submit" value="Send Message">
                         </p>
