--- a/TCA/index.html
+++ b/TCA/index.html
@@ -48,16 +48,9 @@
                     </h1>
                     <form id="contact_us" action="">
                         <p id="first_name">First Name: <input type="text" required id="txt_first_name"></input></p>
-                        <p id="last_name"> Last Name: <input type="text" required id="txt_last_name"></input></p>
-                        <p id ="p_email">
-                            Email: 
-                            <p id="email_txt_wrapper">
-                                <input type="email" required id="txt_email"></input>
-                            </p>
-                        </p>
-                        <p id="txtArea_message_p">
-                           Message: <textarea name="message" id="txtArea_message" cols="22" rows="5"></textarea>
-                        </p>
+                        <p id="last_name"> Last Name:  <span id="span_last_name"><input type="text" required id="txt_last_name"></input></span></p>
+                        <p id ="p_email">  Email:      <span id="span_email"></span><input type="email" required id="txt_email"></input></span></p>
+                        <p id="txtArea_message_p"> <span id="message_txt"> Message: </span> <span id="span_message"><textarea name="message" id="txtArea_message" cols="22" rows="5"></textarea></span></p>
                         <input type="submit" value="Send Message">
                     </form>
                 </div>
