--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="HomePage.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage</title>
 </head>
 <body>
+    <div id="MainPage">
+        <div id="Top of Page">
+            <div id="Logo">
+            <img src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
+            </div> <!end of logo>
+            <div id="Home">
+                <h1 id="HomeHeading">Home</h1>
+            </div> <!end of Home>
+        </div> <!end of Top of page>
+    </div> <!end of MainPage>
     
 </body>
 </html>
