home page is comming along nicely

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <div id="MainPage">
-        <div id="Top of Page">
-            <div id="Logo">
-            <img src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
-            </div> <!end of logo>
-            <div id="Home">
-                <h1 id="HomeHeading">Home</h1>
-            </div> <!end of Home>
-        </div> <!end of Top of page>
+        <div id="Logo">
+        <img src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
+        </div> <!end of logo>
+        <div id="Home">
+            <h1 id="HomeHeading">Home</h1>
+        </div> <!end of Home>
+        <div id="LatestBlog">
+            <h1 id="LatestBlogH1">Latest Blog</h1>
+            <p id="LatestBlogText">
+                This is just test text.
+            </p>
+        </div>
     </div> <!end of MainPage>
-    
 </body>
 </html>
