ground work for css complete for HomePage

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -17,8 +17,20 @@
         <div id="LatestBlog">
             <h1 id="LatestBlogH1">Latest Blog</h1>
             <p id="LatestBlogText">
-                This is just test text.
+                This is just test text.<br>
+                This is just test text.<br>
+                This is just test text.<br>
+                This is just test text.<br>
+                This is just test text.<br>
+                This is just test text.<br>
+                This is just test text.<br>
+                This is just test text.<br>
+                This is just test text.<br>
+                This is just test text.<br>
             </p>
+        </div> <!end of LatestBlog>
+        <div id="LatestPhotos">
+            <h1 id="LatestPhotosH1">Latest Photos</h1>
         </div>
     </div> <!end of MainPage>
 </body>
