almost finished this page needs hamburber

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -32,6 +32,9 @@
         <div id="LatestPhotos">
             <h1 id="LatestPhotosH1">Latest Photos</h1>
         </div>
+        <div id ="SocialMediaLink">
+            <p id="SocialMediaLinkText"><img src ="instaLogo.png" alt ="Instagram Logo">  Follow me on Instagram: </p>
+        </div>
     </div> <!end of MainPage>
 </body>
 </html>
