added hamburger menu

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -11,6 +11,16 @@
         <div id="Logo">
         <img src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
         </div> <!end of logo>
+        <div class="HamIcon" onclick="toggleClass()">
+            <h2>&#9776;</h2>
+        </div>
+        <nav>
+            <ul class="Menu">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Hair Tips</a></li>
+                <li><a href="#">Contact Me</a></li>
+            </ul>
+        </nav>
         <div id="Home">
             <h1 id="HomeHeading">Home</h1>
         </div> <!end of Home>
@@ -33,8 +43,9 @@
             <h1 id="LatestPhotosH1">Latest Photos</h1>
         </div>
         <div id ="SocialMediaLink">
-            <p id="SocialMediaLinkText"><img src ="instaLogo.png" alt ="Instagram Logo">  Follow me on Instagram: </p>
+            <p id="SocialMediaLinkText"><img src ="instaLogo.png" alt ="Instagram Logo">  <span id="SocialMediaLinkSpan">Follow me on Instagram: </span></p>
         </div>
     </div> <!end of MainPage>
+    <script src="HamburgerMenu.js"></script>
 </body>
 </html>
