menu bar almost finished

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -9,18 +9,20 @@
 <body>
     <div id="MainPage">
         <div id="Logo">
-        <img src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
+        <img id="LogoImg" src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
         </div> <!end of logo>
         <div class="HamIcon" onclick="toggleClass()">
             <h2>&#9776;</h2>
         </div>
-        <nav>
-            <ul class="Menu">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Hair Tips</a></li>
-                <li><a href="#">Contact Me</a></li>
-            </ul>
-        </nav>
+        <div id="MenuBar">
+            <nav id="nav">
+                <ul class="Menu">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Hair Tips</a></li>
+                    <li><a href="#">Contact Me</a></li>
+                </ul>
+            </nav>
+        </div>
         <div id="Home">
             <h1 id="HomeHeading">Home</h1>
         </div> <!end of Home>
