--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -9,12 +9,12 @@
 <body>
     <div id="MainPage">
         <div id="Logo">
-        <img id="LogoImg" src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
+            <img id="LogoImg" src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
         </div> <!end of logo>
         <div class="HamIcon" onclick="toggleClass()">
-            <h2 id="HamIconText"> &#9776; </h2>
+            <h1 id="HamIconText"> &#9776; </h1>
         </div>
-        <div id="MenuBar"></div>
+        <div id="MenuBar">
             <nav id="nav">
                 <ul class="Menu">
                     <li><a href="#">About</a></li>
