finished off homepage

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -11,18 +11,20 @@
         <div id="Logo">
             <img id="LogoImg" src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
         </div> <!end of logo>
-        <div class="HamIcon" onclick="toggleClass()">
-            <h1 id="HamIconText"> &#9776; </h1>
-        </div>
-        <div id="MenuBar">
-            <nav id="nav">
-                <ul class="Menu">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Hair Tips</a></li>
-                    <li><a href="#">Contact Me</a></li>
-                </ul>
-            </nav>
-        </div> <!MenuBar end>
+        <div id="MenuWrapper">
+            <div class="HamIcon" onclick="toggleClass()">
+                <h1 id="HamIconText"> &#9776; </h1>
+            </div>
+            <div id="MenuBar">
+                <nav id="nav">
+                    <ul class="Menu">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Hair Tips</a></li>
+                        <li><a href="#">Contact Me</a></li>
+                    </ul>
+                </nav>
+            </div> <!MenuBar end>
+        </div> <!end of MenuWrapper>
         <div id="Home">
             <h1 id="HomeHeading">Home</h1>
         </div> <!end of Home>
