index links to homepage

--- a/Assessment/index.html
+++ b/Assessment/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href src="HomePage.html"> HomePage</a>
+    <a href="HomePage.html"> HomePage</a>
 </body>
 </html>
