got rid of the hamburger menu, i couldnt get it looking right

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -11,6 +11,16 @@
         <div id="Logo">
             <img id="LogoImg" src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
         </div> <!end of logo>
+        <div id="MenuBar">
+            <nav id="nav">
+                <ul class="Menu">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Hair Tips</a></li>
+                    <li><a href="#">Contact Me</a></li>
+                </ul>
+            </nav>
+        </div> <!MenuBar end>
+        <!--
         <div id="MenuWrapper">
             <div class="HamIcon" onclick="toggleClass()">
                 <h1 id="HamIconText"> &#9776; </h1>
@@ -25,6 +35,7 @@
                 </nav>
             </div> <!MenuBar end>
         </div> <!end of MenuWrapper>
+        -->
         <div id="Home">
             <h1 id="HomeHeading">Home</h1>
         </div> <!end of Home>
@@ -47,9 +58,9 @@
             <h1 id="LatestPhotosH1">Latest Photos</h1>
         </div>
         <div id ="SocialMediaLink">
-            <p id="SocialMediaLinkText"><img src ="instaLogo.png" alt ="Instagram Logo">  <span id="SocialMediaLinkSpan">Follow me on Instagram: </span></p>
+            <p id="SocialMediaLinkText"><span id="SocialMediaLinkSpan">Follow me on Instagram: </span></p>
         </div>
     </div> <!end of MainPage>
-    <script src="HamburgerMenu.js"></script>
+    <!--<script src="HamburgerMenu.js"></script>-->
 </body>
 </html>
