got the hamburger menu to look nice. now i need to sort out what it looks like when clicked

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -11,19 +11,9 @@
         <div id="Logo">
             <img id="LogoImg" src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
         </div> <!end of logo>
-        <div id="MenuBar">
-            <nav id="nav">
-                <ul class="Menu">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Hair Tips</a></li>
-                    <li><a href="#">Contact Me</a></li>
-                </ul>
-            </nav>
-        </div> <!MenuBar end>
-        <!--
         <div id="MenuWrapper">
             <div class="HamIcon" onclick="toggleClass()">
-                <h1 id="HamIconText"> &#9776; </h1>
+                <h2 id="HamIconText"> &#9776; </h2>
             </div>
             <div id="MenuBar">
                 <nav id="nav">
@@ -34,11 +24,10 @@
                     </ul>
                 </nav>
             </div> <!MenuBar end>
+            <div id="Home">
+                <h1 id="HomeHeading">Home</h1>
+            </div> <!end of Home>
         </div> <!end of MenuWrapper>
-        -->
-        <div id="Home">
-            <h1 id="HomeHeading">Home</h1>
-        </div> <!end of Home>
         <div id="LatestBlog">
             <h1 id="LatestBlogH1">Latest Blog</h1>
             <p id="LatestBlogText">
@@ -61,6 +50,6 @@
             <p id="SocialMediaLinkText"><span id="SocialMediaLinkSpan">Follow me on Instagram: </span></p>
         </div>
     </div> <!end of MainPage>
-    <!--<script src="HamburgerMenu.js"></script>-->
+    <script src="HamburgerMenu.js"></script>
 </body>
 </html>
