menu bar looks good, finally

--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -7,7 +7,7 @@
     <title>HomePage</title>
 </head>
 <body>
-    <div id="MainPage">
+    <div id="WholePage">
         <div id="Logo">
             <img id="LogoImg" src = "JadieLavender_Logo.png" alt = "Jadie Lavender Logo.">
         </div> <!end of logo>
@@ -28,28 +28,30 @@
                 <h1 id="HomeHeading">Home</h1>
             </div> <!end of Home>
         </div> <!end of MenuWrapper>
-        <div id="LatestBlog">
-            <h1 id="LatestBlogH1">Latest Blog</h1>
-            <p id="LatestBlogText">
-                This is just test text.<br>
-                This is just test text.<br>
-                This is just test text.<br>
-                This is just test text.<br>
-                This is just test text.<br>
-                This is just test text.<br>
-                This is just test text.<br>
-                This is just test text.<br>
-                This is just test text.<br>
-                This is just test text.<br>
-            </p>
-        </div> <!end of LatestBlog>
-        <div id="LatestPhotos">
-            <h1 id="LatestPhotosH1">Latest Photos</h1>
-        </div>
-        <div id ="SocialMediaLink">
-            <p id="SocialMediaLinkText"><span id="SocialMediaLinkSpan">Follow me on Instagram: </span></p>
-        </div>
-    </div> <!end of MainPage>
+        <div id="MainPage">
+            <div id="LatestBlog">
+                <h1 id="LatestBlogH1">Latest Blog</h1>
+                <p id="LatestBlogText">
+                    This is just test text.<br>
+                    This is just test text.<br>
+                    This is just test text.<br>
+                    This is just test text.<br>
+                    This is just test text.<br>
+                    This is just test text.<br>
+                    This is just test text.<br>
+                    This is just test text.<br>
+                    This is just test text.<br>
+                    This is just test text.<br>
+                </p>
+            </div> <!end of LatestBlog>
+            <div id="LatestPhotos">
+                <h1 id="LatestPhotosH1">Latest Photos</h1>
+            </div>
+            <div id ="SocialMediaLink">
+                <p id="SocialMediaLinkText"><span id="SocialMediaLinkSpan">Follow me on Instagram: </span></p>
+            </div>
+        </div> <!end of MainPage>
+    </div>
     <script src="HamburgerMenu.js"></script>
 </body>
 </html>
