--- a/Assessment/HomePage.html
+++ b/Assessment/HomePage.html
@@ -47,11 +47,11 @@
             <div id="LatestPhotos">
                 <h1 id="LatestPhotosH1">Latest Photos</h1>
             </div>
-            <div id ="SocialMediaLink">
-                <p id="SocialMediaLinkText"><span id="SocialMediaLinkSpan">Follow me on Instagram: </span></p>
-            </div>
         </div> <!end of MainPage>
-    </div>
+        <div id ="SocialMediaLink">
+            <p id="SocialMediaLinkText">Follow me on Instagram: </p>
+        </div>
+    </div><!end of WholePage>
     <script src="HamburgerMenu.js"></script>
 </body>
 </html>
