--- a/Assessment/About.html
+++ b/Assessment/About.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="HomePage.css">
+    <link rel="stylesheet" type="text/css" href="About.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>About</title>
 </head>
 <body>
     <div id="WholePage">
@@ -18,20 +18,20 @@
             <div id="MenuBar">
                 <nav id="nav">
                     <ul class="Menu">
-                        <li><a href="About.html">About</a></li>
+                        <li><a href="HomePage.html">Home</a></li>
                         <li><a href="#">Hair Tips</a></li>
                         <li><a href="#">Contact Me</a></li>
                     </ul>
                 </nav>
             </div> <!MenuBar end>
-            <div id="Home">
-                <h1 id="HomeHeading">Home</h1>
-            </div> <!end of Home>
+            <div id="About">
+                <h1 id="AboutHeading">About</h1>
+            </div> <!end of About>
         </div> <!end of MenuWrapper>
         <div id="MainPage">
-            <div id="LatestBlog">
-                <h1 id="LatestBlogH1">Latest Blog</h1>
-                <p id="LatestBlogText">
+            <div id="MyJourney">
+                <h1 id="MyJourneyH1">My Journey</h1>
+                <p id="MyJourneyText">
                     This is just test text.<br>
                     This is just test text.<br>
                     This is just test text.<br>
@@ -43,10 +43,7 @@
                     This is just test text.<br>
                     This is just test text.<br>
                 </p>
-            </div> <!end of LatestBlog>
-            <div id="LatestPhotos">
-                <h1 id="LatestPhotosH1">Latest Photos</h1>
-            </div>
+            </div> <!end of MyJourney>
         </div> <!end of MainPage>
         <div id ="SocialMediaLink">
             <p id="SocialMediaLinkText">Follow me on Instagram: </p>
