Hair care tips page template finished

--- a/Assessment/HairCareTips.html
+++ b/Assessment/HairCareTips.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="HomePage.css">
+    <link rel="stylesheet" type="text/css" href="HairCareTips.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Hair Care Tips Page</title>
 </head>
 <body>
     <div id="WholePage">
@@ -19,19 +19,19 @@
                 <nav id="nav">
                     <ul class="Menu">
                         <li><a href="About.html">About</a></li>
-                        <li><a href="HairCareTips.html">Hair Care Tips</a></li>
+                        <li><a href="HomePage.html">Home</a></li>
                         <li><a href="#">Contact Me</a></li>
                     </ul>
                 </nav>
             </div> <!MenuBar end>
-            <div id="Home">
-                <h1 id="HomeHeading">Home</h1>
-            </div> <!end of Home>
+            <div id="HairCareTips">
+                <h1 id="HairCareTipsHeading">Hair Care Tips</h1>
+            </div> <!end of HairCareTips>
         </div> <!end of MenuWrapper>
         <div id="MainPage">
-            <div id="LatestBlog">
-                <h1 id="LatestBlogH1">Latest Blog</h1>
-                <p id="LatestBlogText">
+            <div id="RuleOfThumb">
+                <h1 id="RuleOfThumbH1">Rules of Thumb</h1>
+                <p id="RuleOfThumbText">
                     This is just test text.<br>
                     This is just test text.<br>
                     This is just test text.<br>
@@ -43,9 +43,9 @@
                     This is just test text.<br>
                     This is just test text.<br>
                 </p>
-            </div> <!end of LatestBlog>
-            <div id="LatestPhotos">
-                <h1 id="LatestPhotosH1">Latest Photos</h1>
+            </div> <!end of RuleOfThumb>
+            <div id="HairProducts">
+                <h1 id="HairProductsH1">Hair Products I Use</h1>
             </div>
         </div> <!end of MainPage>
         <div id ="SocialMediaLink">
