--- a/Assessment/About.html
+++ b/Assessment/About.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="About.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Hair Care Tips</title>
 </head>
 <body>
     <div id="WholePage">
@@ -19,7 +19,7 @@
                 <nav id="nav">
                     <ul class="Menu">
                         <li><a href="HomePage.html">Home</a></li>
-                        <li><a href="#">Hair Tips</a></li>
+                        <li><a href="HairCareTips.html">Hair Care Tips</a></li>
                         <li><a href="#">Contact Me</a></li>
                     </ul>
                 </nav>
