just got the last page to go

--- a/Assessment/About.html
+++ b/Assessment/About.html
@@ -46,7 +46,9 @@
             </div> <!end of MyJourney>
         </div> <!end of MainPage>
         <div id ="SocialMediaLink">
-            <p id="SocialMediaLinkText">Follow me on Instagram: </p>
+            <p id="SocialMediaLinkText">Follow me on Instagram: 
+            <a id="InstaLink" href="https://www.instagram.com/jadie_lavender/?hl=en">@jadie_lavender</a>
+            </p>        
         </div>
     </div><!end of WholePage>
     <script src="HamburgerMenu.js"></script>
