--- a/Assessment/About.html
+++ b/Assessment/About.html
@@ -20,7 +20,7 @@
                     <ul class="Menu">
                         <li><a href="HomePage.html">Home</a></li>
                         <li><a href="HairCareTips.html">Hair Care Tips</a></li>
-                        <li><a href="#">Contact Me</a></li>
+                        <li><a href="ContactMe.html">Contact Me</a></li>
                     </ul>
                 </nav>
             </div> <!MenuBar end>
