--- a/Assessment/ContactMe.html
+++ b/Assessment/ContactMe.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="HairCareTips.css">
+    <link rel="stylesheet" type="text/css" href="ContactMe.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hair Care Tips Page</title>
+    <title>Contact Me</title>
 </head>
 <body>
     <div id="WholePage">
@@ -19,19 +19,19 @@
                 <nav id="nav">
                     <ul class="Menu">
                         <li><a href="About.html">About</a></li>
+                        <li><a href="HairCareTips.html">Hair Care Tips</a></li>
                         <li><a href="HomePage.html">Home</a></li>
-                        <li><a href="ContactMe.html">Contact Me</a></li>
                     </ul>
                 </nav>
             </div> <!MenuBar end>
-            <div id="HairCareTips">
-                <h1 id="HairCareTipsHeading">Hair Care Tips</h1>
-            </div> <!end of HairCareTips>
+            <div id="Home">
+                <h1 id="HomeHeading">ContactMe</h1>
+            </div> <!end of Home>
         </div> <!end of MenuWrapper>
         <div id="MainPage">
-            <div id="RuleOfThumb">
-                <h1 id="RuleOfThumbH1">Rules of Thumb</h1>
-                <p id="RuleOfThumbText">
+            <div id="HowToContact">
+                <h1 id="HowToContactH1">How To Contact Me</h1>
+                <p id="HowToContactText">
                     This is just test text.<br>
                     This is just test text.<br>
                     This is just test text.<br>
@@ -43,9 +43,12 @@
                     This is just test text.<br>
                     This is just test text.<br>
                 </p>
-            </div> <!end of RuleOfThumb>
-            <div id="HairProducts">
-                <h1 id="HairProductsH1">Hair Products I Use</h1>
+            </div> <!end of HowToContact>
+            <div id="GetInContact">
+                <h1 id="GetInContactH1">Get In Contact</h1>
+                <form id="GetInContactFrm">
+
+                </form>
             </div>
         </div> <!end of MainPage>
         <div id ="SocialMediaLink">
