Form has started to be implemented

--- a/Assessment/ContactMe.html
+++ b/Assessment/ContactMe.html
@@ -46,8 +46,20 @@
             </div> <!end of HowToContact>
             <div id="GetInContact">
                 <h1 id="GetInContactH1">Get In Contact</h1>
-                <form id="GetInContactFrm">
-
+                <form id="GetInContactFrm" action="FormSubmitted.html" method="post">
+                    <p>Name:  <input type="text"></input></p>
+                    <p>Email: <input type="email"></input></p>
+                    <p>Age:   <input type="number"></input></p>
+                    <p>
+                        Hair type<br>
+                        Curly <input type="checkbox"></input><br>
+                        Straight <input type="checkbox"></input><br>
+                        Thick <input type="checkbox"></input><br>
+                        Thin <input type="checkbox"></input><br>
+                        Matte <input type="checkbox"></input><br>
+                        Shiny <input type="checkbox"></input>
+                    </p>
+                    <p><button>Submit</button></p>
                 </form>
             </div>
         </div> <!end of MainPage>
